# gazebo_sim

./: .gitmodules  DOCUMENTATION.md  README.md
apptainer/: ubuntu-gazebo_sim-basic.def  ubuntu-gazebo_sim-full.def  windows-gazebo_sim-basic.def
models/drone/: model.config  model.sdf
models/person/: model.config  model.sdf
models/person/meshes/: person.mtl
models/procedural-forest/: .gitignore  model.config  model.sdf
models/procedural-forest/materials/textures/: ground_001_diffuse.tga  ground_001_normal.tga  ground_001_specular.tga  ground_007_diffuse.tga  ground_007_normal.tga  (+28 more)
models/procedural-forest/meshes/: .gitignore
plugins/: .gitignore  build_plugins_basic.sh  build_plugins_full.sh
plugins/camera_saver/: CMakeLists.txt  camera_saver.cpp
plugins/drone/: CMakeLists.txt
plugins/drone/include/: drone.h
plugins/drone/src/: drone.cpp
plugins/forest/: CMakeLists.txt
plugins/forest/include/: forest.h  ground.h  mesh_utils.h  tree.h
plugins/forest/src/: forest.cpp  ground.cpp  mesh_utils.cpp  tree.cpp
plugins/person/: CMakeLists.txt
plugins/person/include/: person.h
plugins/person/src/: person.cpp
plugins/photo_shoot/: CMakeLists.txt
plugins/photo_shoot/include/: PhotoShoot.h
plugins/photo_shoot/src/: PhotoShoot.cpp
plugins/swarm/: CMakeLists.txt
plugins/swarm/include/: swarm.h
plugins/swarm/src/: swarm  swarm.cpp
python/: DashGUI.py  example_person.py  example_photo_shoot.py  example_swarm.py  example_visualization.py  forest_config.py  launcher.py  person.py  person_config.py  photo_shoot_config.py  plugin_config.py  swarm.py  world_config.py
python/assets/: config_depth.txt  config_rgb.txt  config_thermal.txt  photo_shoot.sdf  style.css
worlds/: example_forest.sdf  example_person.sdf  example_photo_shoot.sdf  example_swarm.sdf
